Better persistence then before