@@ -13,41 +13,41 @@ import java.io.OutputStreamWriter;
 
 public final class SaveStateService {
 
-    private static SaveStateService serviceInstance= new SaveStateService();
+    private static SaveStateService serviceInstance = new SaveStateService();
 
-    private SaveStateService(){}
+    private SaveStateService() {
+    }
 
-    public static SaveStateService getInstance(){
+    public static SaveStateService getInstance() {
         return serviceInstance;
     }
-    public Integer getLevel(Context context){
+
+    public Integer getLevel(Context context) {
         return serviceInstance.recoverLvl(context);
     }
-    public void  setLevel(int lvl, Context context){
-        serviceInstance.saveLvl(lvl, context);
+
+    public void setLevel(int level, Context context) {
+        serviceInstance.saveLvl(level, context);
     }
-    private void saveLvl(int lvl, Context context){
+
+    private void saveLvl(int lvl, Context context) {
         try {
-            OutputStreamWriter fout= new OutputStreamWriter(context.openFileOutput("mi_fichero.txt", Context.MODE_PRIVATE));
-            fout.write(lvl);
-            fout.close();
-        }
-        catch (Exception ex)
-        {
-            Log.e("Ficheros", "Error al escribir fichero a memoria interna");
+            OutputStreamWriter writer = new OutputStreamWriter(context.openFileOutput("levels_file.txt", Context.MODE_PRIVATE));
+            writer.write(lvl);
+            writer.close();
+        } catch (Exception ex) {
+            Log.e("Files", "SaveStateService : Error while writing to memory");
         }
     }
 
-    private Integer recoverLvl(Context context){
-        try{
-            BufferedReader fin = new BufferedReader(new InputStreamReader(context.openFileInput("mi_fichero.txt")));
-            String texto = fin.readLine();
-            fin.close();
-            return  new Integer((texto==null || texto==""? "0":texto));
-        }
-        catch (Exception ex)
-        {
-            Log.e("Ficheros", "Error al leer fichero desde memoria interna");
+    private Integer recoverLvl(Context context) {
+        try {
+            BufferedReader reader = new BufferedReader(new InputStreamReader(context.openFileInput("levels_file.txt")));
+            String levelString = reader.readLine();
+            reader.close();
+            return levelString == null ? 0 : Integer.valueOf(levelString);
+        } catch (Exception ex) {
+            Log.e("Files", "SaveStateService : Error while reading from memory");
             return 0;
         }
     }
